k8s/custom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec: 
  tls:
  - hosts:
    - mock-api-hub.ru
    secretName: secret-tls
  ingressClassName: nginx
  rules:
  - host: mock-api-hub.ru
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
